# ai-ml-data-science-projects

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENT_PLAN.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-quality.yml  notebook-check.yml
common/: README.md  utils.py  visualization.py
projects/airline-customer-review-sentiment-analysis/: README.md  requirements.txt
projects/article-categorization/: README.md  requirements.txt
projects/bank-customer-churn_prediction/: README.md  requirements.txt
projects/covid-image-classification/: README.md  requirements.txt
projects/credit-card-churn-prediction/: README.md  requirements.txt
projects/generative-ai-using-openai/: README.md  requirements.txt
projects/online-foodhub-exploratory-data-analysis/: README.md  requirements.txt
projects/personal-loan-purchase-prediction/: README.md  requirements.txt
projects/support-ticket-categorization/: README.md  requirements.txt
